Login and signup page issues is alignment issues is fixed

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -40,7 +40,7 @@
 .login-card label {
   font-weight: 600;
   color: #555;
-  text-align: center;
+  text-align: left;
   display: block;
 }
 
